--- a/DesignPatternTraining/DesignPatternTraining.csproj
+++ b/DesignPatternTraining/DesignPatternTraining.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="01_State\IFakeService.cs" />
+    <Compile Include="01_State\SituationA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
