--- a/DesignPatternTraining/DesignPatternTraining.csproj
+++ b/DesignPatternTraining/DesignPatternTraining.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="01_State\IFakeService.cs" />
+    <Compile Include="01_State\SituationA_StateLite.cs" />
+    <Compile Include="01_State\SituationA_State.cs" />
     <Compile Include="01_State\SituationA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
