--- a/DesignPatternTraining/DesignPatternTraining.csproj
+++ b/DesignPatternTraining/DesignPatternTraining.csproj
@@ -48,11 +48,16 @@
     <Compile Include="01_State\SituationA_StateLite.cs" />
     <Compile Include="01_State\SituationA_State.cs" />
     <Compile Include="01_State\SituationA.cs" />
+    <Compile Include="02_COR\SituationC_COR.cs" />
+    <Compile Include="02_COR\SituationC.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="02_COR\COR _ Chain of Responsibility.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
