--- a/DesignPatternTraining/DesignPatternTraining.csproj
+++ b/DesignPatternTraining/DesignPatternTraining.csproj
@@ -48,6 +48,7 @@
     <Compile Include="01_State\SituationA_StateLite.cs" />
     <Compile Include="01_State\SituationA_State.cs" />
     <Compile Include="01_State\SituationA.cs" />
+    <Compile Include="02_COR\SituationC_COR2.cs" />
     <Compile Include="02_COR\SituationC_COR.cs" />
     <Compile Include="02_COR\SituationC.cs" />
     <Compile Include="Program.cs" />
